@@ -360,6 +360,17 @@ public class MultiDocValues {
     public long getValueCount() {
       return globalOrdDeltas.size();
     }
+    
+    /** 
+     * Returns total byte size used by this ordinal map. 
+     */
+    public long ramBytesUsed() {
+      long size = globalOrdDeltas.ramBytesUsed() + subIndexes.ramBytesUsed();
+      for (int i = 0; i < ordDeltas.length; i++) {
+        size += ordDeltas[i].ramBytesUsed();
+      }
+      return size;
+    }
   }
   
   /** 
